--- a/sesje/zarzadzanie/style_zarzadzanie.css
+++ b/sesje/zarzadzanie/style_zarzadzanie.css
@@ -54,14 +54,14 @@ h5 {
     color: white;
 }
 
-.wrapper .logout {
+.wrapper .btn {
     font-size: 17px;
     text-align: center;
     margin-top: 25px;
     margin: 40px 0 60px;
 }
 
-.logout a {
+.btn a {
     color: white;
     text-decoration: none;
     font-weight: 600;
@@ -79,7 +79,7 @@ h5 {
     padding: 10px;
 }
 
-.logout a:hiver{
+.btn a:hiver{
     text-decoration: underline;
 }
 
